--- a/html/app.html
+++ b/html/app.html
@@ -13,7 +13,7 @@
     <canvas id="myCanvas" width="700" height="500">
     </canvas>
     
-      <button type="button"onclick="alert('Hello srinivas!')">Clear</button>
+      <button type="button"onclick="alert('Hello SreenivaaS!')">Clear</button>
     <!-- <button type="button"onclick="alert('Hello srinivas!')">Clear</button> -->
   
         <!-- <div class="container1"> -->
